--- a/templates/main_page.html
+++ b/templates/main_page.html
@@ -1,17 +1,87 @@
 {% extends "base.html" %}
 {% block link %}
-
 {% endblock %}
 
 {% block title %}Main page{% endblock %}
 
 {% block content %}
-<form>
-    <div class="input-group mb-3" style="">
-      <input type="text" class="form-control" placeholder="Search by movie title, actor name, year..." aria-label="Search" aria-describedby="basic-addon2">
-      <div class="input-group-append">
-        <button class="btn btn-outline-secondary" type="button">Search</button>
-      </div>
+<div class="loader"></div>
+
+<img src="static/movie_gen_pulp.jpg" alt="Movie-Generator Logo" width="400" height="300" style="display: block; margin-left: auto; margin-right: auto; margin-top: 0px; margin-bottom: 20px;">
+
+
+<form method="post">
+    <div class="container-xl" style="padding-bottom: 50px; height: 100px;">
+        <div class="row">
+            <div class="col-sm-10">
+                <label>Search movies by typing in the title, if you wish to search authors and directors type a: or d: before the name.</label>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-sm-10">
+                <div class="input-group mb-5 input-lg" style="">
+                  <input name="search" type="text" class="form-control input-lg" placeholder="Ex. search: Movie Name, a: Actor Name, d: Director Name" aria-label="Search" aria-describedby="basic-addon2">
+                  <span class="input-group-btn">
+                    <button class="btn btn-primary" name="search_button" value="submit" type="submit">Search</button>
+                  </span>
+                  <span class="input-group-btn" style="padding-left: 40px;">
+                    <strong>Couldn't find a movie? Add one</strong>
+                    <button class="btn btn-primary" name="add_new_movie" value="submit" type="submit">+</button>
+                  </span>
+                </div>
+            </div>
+        </div>
     </div>
+    {% if search_resoults == 0 %}
+        <div class="row">
+            <div class="col-sm-10">
+                <label> We didn't find any matching resoults in our database. :( Add the movie?</label>
+            </div>
+        </div>
+    {% elif search_resoults == -1 %}
+        <div class="row">
+            <div class="col-sm-10">
+                <label> </label>
+            </div>
+        </div>
+    {% else %}
+        <div class="row">
+            <div class="col-sm-10">
+                <label>We found {{ search_resoults }} matches</label>
+            </div>
+        </div>
+    {% endif %}
+    <!-- movies gets passed in as a list containing movie data dicts -->
+    <ul class="list-unstyled">
+        {% for movie in movies %}
+            <div class="media border p-3">
+                <img src="{{ movie.img_url }}" alt="{{ movie.title }} picture" class="mr-3 mt-3" style="width:150px;">
+                 <div class="media-body" style="padding-left: 30px;">
+                     <h2><a href="{{ url_for('movie', id=movie.idMovie)}}">{{ movie.title }}</a><small><i>  {{ movie.releaseYear}}</i></small></h2>
+                     <a href="https://www.imdb.com/title/{{ movie.idMovie }}/">IMDb {{ movie.title }}</a>
+                     <p> Length: {{ movie.runtimeMinutes }}min</p>
+                     <p> Rating: <b>{{ movie.rating }}</b></p>
+                     <p> Number of votes: <b>{{ movie.numVotes }}</b></p>
+                     {% if movie.isAdult == 1 %}
+                        <p> Child safe: No</p>
+                     {% else %}
+                        <p> Child safe: Yes</p>
+                     {% endif %}
+                     {% if session.logged_in %}
+                         <div class="row float-right">
+                             <div class="btn-group btn-group-toggle" data-toggle="buttons">
+                                 <label class="btn btn-outline-primary active">
+                                    <input type="checkbox" checked autocomplete="off"> Like
+                                 </label>
+                                 <label class="btn btn-outline-primary active">
+                                    <input type="checkbox" checked autocomplete="off"> Watched
+                                 </label>
+                             </div>
+                         </div>
+                     {% endif %}
+                 </div>
+            </div>
+        {% endfor %}
+    </ul>
 </form>
 {% endblock %}
