Added user page.

--- a/templates/main_page.html
+++ b/templates/main_page.html
@@ -5,10 +5,7 @@
 {% block title %}Main page{% endblock %}
 
 {% block content %}
-<div class="loader"></div>
-
-<img src="static/movie_gen_pulp.jpg" alt="Movie-Generator Logo" width="400" height="300" style="display: block; margin-left: auto; margin-right: auto; margin-top: 0px; margin-bottom: 20px;">
-
+<img src="static/logo_movie_gen.jpg" alt="Movie-Generator Logo" width="200" height="200" style="display: block; margin-left: auto; margin-right: auto; margin-top: 0px; margin-bottom: 20px;">
 
 <form method="post">
     <div class="container-xl" style="padding-bottom: 50px; height: 100px;">
