--- a/templates/includes/_navbar.html
+++ b/templates/includes/_navbar.html
@@ -18,7 +18,10 @@
     </ul>
     <ul class="navbar-nav">
       {% if session.logged_in %}
-        <li class="nav-item"><a class="nav-link" href="/myprofile">My Profile ({{ session.user.username }})</a></li>
+        <!-- <li class="nav-item"><a class="nav-link" href="/myprofile">My Profile ({{ session.user.username }})</a></li> -->
+        <li class="nav-item">
+          <a class="nav-link" href="{{ url_for('user_profile', username=session.user.username) }}">My Profile ({{ session.user.username }})</a>
+        </li>
         <li class="nav-item"><a class="nav-link" href="/log_out">Logout</a></li>
       {% else %}
         <li class="nav-item"><a class="nav-link" href="/login">Login</a></li>
