--- a/templates/random_generator.html
+++ b/templates/random_generator.html
@@ -10,19 +10,36 @@ function updateTextInput(val) {
 {% block title %}Random Generator{% endblock %}
 
 {% block content %}
-<form>
-    <div class="input-group mb-3" style="">
-      <input type="text" class="form-control" placeholder="Search by movie title, actor name, year..." aria-label="Search" aria-describedby="basic-addon2">
-      <div class="input-group-append">
-        <button class="btn btn-outline-secondary" type="button">Search</button>
-      </div>
+<img src="static/movie_gen_pulp.jpg" alt="Movie-Generator Logo" width="400" height="300" style="display: block; margin-left: auto; margin-right: auto; margin-top: 0px; margin-bottom: 20px;">
+
+<form method="post">
+    <div class="container-xl" style="padding-bottom: 50px; height: 100px;">
+        <div class="row">
+            <div class="col-sm-10">
+                <label>Search movies by typing in the title, if you wish to search authors and directors type a: or d: before the name.</label>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-sm-10">
+                <div class="input-group mb-5 input-lg" style="">
+                  <input name="search" type="text" class="form-control input-lg" placeholder="Ex. search: Movie Name, a: Actor Name, d: Director Name" aria-label="Search" aria-describedby="basic-addon2">
+                  <span class="input-group-btn">
+                    <button class="btn btn-primary" name="search_button" value="submit" type="submit">Search</button>
+                  </span>
+                  <span class="input-group-btn" style="padding-left: 40px;">
+                    <strong>Couldn't find a movie? Add one</strong>
+                    <button class="btn btn-primary" name="add_new_movie" value="submit" type="submit">+</button>
+                  </span>
+                </div>
+            </div>
+        </div>
     </div>
-    <div class="input-group mb-3" style="">
-        <label for="customRange3" class="form-label">Example range</label>
-        <input type="range" class="form-range" min="0" max="5" step="0.5" id="customRange3">
-        <input type="range" name="rangeInput" min="1900" max="2020" onchange="updateTextInput(this.value);">
-        <input type="text" id="textInput" value="">
+    <div class="row">
+        <div class="col-sm-10">
+            <label>Fill out the parameters for a slimmer search.</label>
+        </div>
     </div>
+
 
 </form>
 {% endblock %}
