Progress on user page/interface, deleted half of big Luka function he he

--- a/templates/movie_page.html
+++ b/templates/movie_page.html
@@ -36,15 +36,15 @@
                     <div class="col-md-2">
                         {% if session.logged_in %}
                         <div class="input-group">
-                            {% if movie.idMovie in session.user.liked.keys() %}
-                                <button type="submit" name="like_button" value="unliked {{ movie.idMovie }}" class="btn btn-outline-danger active">Liked</button>
+                            {% if movie.idMovie in session.user.liked %}
+                                <button type="submit" name="save_button" value="unliked {{ movie.idMovie }}" class="btn btn-outline-danger active">Liked</button>
                             {% else %}
-                                <button type="submit" name="like_button" value="liked {{ movie.idMovie }}" class="btn btn-outline-danger">Like</button>
+                                <button type="submit" name="save_button" value="liked {{ movie.idMovie }}" class="btn btn-outline-danger">Like</button>
                             {% endif %}
                             {% if movie.idMovie in session.user.watched.keys() %}
-                                <button type="submit" class="btn btn-outline-success active">Watched</button>
+                                <button type="submit" name="save_button" value="unwatched {{ movie.idMovie }}" class="btn btn-outline-success active">Watched</button>
                             {% else %}
-                                <button type="submit" class="btn btn-outline-success">Watched</button>
+                                <button type="submit" name="save_button" value="watched {{ movie.idMovie }}" class="btn btn-outline-success">Watched</button>
                             {% endif %}
                         </div>
                         {% else %}
