Geniouous moves by Luka and Liam

--- a/templates/random_generator.html
+++ b/templates/random_generator.html
@@ -40,6 +40,74 @@ function updateTextInput(val) {
         </div>
     </div>
 
+    <div class="row bg-light" style="padding-top: 40px;">
+        <div class="col-sm-2">
+            <label style="padding-top: 25px; font-size: 23px;">Release year:</label>
+        </div>
+        <div class="col-sm-2">
+            <label>From</label>
+            <input type="number" class="form-control" placeholder="1915">
+        </div>
+        <div class="col-sm-2">
+            <label> to</label>
+            <input type="number" class="form-control" placeholder="2020">
+        </div>
+        <div class="col-sm-4">
+            <label style="font-size: 23px;">Pick one or more genres: </label>
+            <select multiple class="form-control" id="exampleFormControlSelect">
+                <option>1</option>
+                <option>2</option>
+                <option>3</option>
+                <option>4</option>
+                <option>5</option>
+            </select>
+        </div>
+    </div>
+    <div class="row bg-light" style="padding-top: 40px;">
+        <div class="col-sm-2">
+            <label style="padding-top: 25px; font-size: 20px;">Duration: </label>
+        </div>
+        <div class="col-sm-2">
+            <label>From</label>
+            <input type="number" class="form-control" placeholder="1915">
+        </div>
+        <div class="col-sm-2">
+            <label> to</label>
+            <input type="number" class="form-control" placeholder="2020">
+        </div>
+        <div class="col-sm-4">
+            <label style="font-size: 23px;">Directed by: </label>
+            <input class="form-control" type="text" placeholder="Ex. Quentin Tarantino">
+        </div>
+    </div>
+    <div class="row bg-light" style="padding-top: 40px;">
+        <div class="col-sm-2">
+            <label style="padding-top: 25px; font-size: 20px;">Number of votes:</label>
+        </div>
+        <div class="col-sm-2">
+            <label>From</label>
+            <input type="number" class="form-control" placeholder="1915">
+        </div>
+        <div class="col-sm-2">
+            <label> to</label>
+            <input type="number" class="form-control" placeholder="2020">
+        </div>
+    </div>
 
+    <div class="row bg-light" style="padding-top: 40px;">
+        <div class="col-sm-2">
+            <label style="padding-top: 25px; font-size: 20px; padding-left: 20px;">Rating:</label>
+        </div>
+        <div class="col-sm-2">
+            <label>From</label>
+            <input type="number" class="form-control" placeholder="1915">
+        </div>
+        <div class="col-sm-2">
+            <label> to</label>
+            <input type="number" class="form-control" placeholder="2020">
+        </div>
+    </div>
+
+    <div class="row" style="padding-top: 60px;"></div>
 </form>
 {% endblock %}
