Minor changes do dbComm

--- a/templates/movie_page.html
+++ b/templates/movie_page.html
@@ -2,7 +2,7 @@
 {% block link %}
 {% endblock %}
 
-{% block title %}To do{% endblock %}
+{% block title %}RG: {{ movie.title }}{% endblock %}
 
 {% block content %}
 
