--- a/templates/random_generator.html
+++ b/templates/random_generator.html
@@ -55,11 +55,33 @@ function updateTextInput(val) {
         <div class="col-sm-4">
             <label style="font-size: 23px;">Pick one or more genres: </label>
             <select name="select_genre" multiple class="form-control" id="exampleFormControlSelect">
-                <option>1</option>
-                <option>2</option>
-                <option>3</option>
-                <option>4</option>
-                <option>5</option>
+                <option>Action</option>
+                <option>Adult</option>
+                <option>Adventure</option>
+                <option>Animation</option>
+                <option>Biography</option>
+                <option>Comedy</option>
+                <option>Crime</option>
+                <option>Documentary</option>
+                <option>Drama</option>
+                <option>Family</option>
+                <option>Fantasy</option>
+                <option>Film-Noir</option>
+                <option>History</option>
+                <option>Horror</option>
+                <option>Music</option>
+                <option>Musical</option>
+                <option>Mystery</option>
+                <option>News</option>
+                <option>Reality-TV</option>
+                <option>Romance</option>
+                <option>Sci-Fi</option>
+                <option>Short</option>
+                <option>Sport</option>
+                <option>Talk-Show</option>
+                <option>Thriller</option>
+                <option>War</option>
+                <option>Western</option>
             </select>
         </div>
     </div>
