random_generator now works

--- a/templates/random_generator.html
+++ b/templates/random_generator.html
@@ -130,7 +130,7 @@ function updateTextInput(val) {
         </div>
     </div>
 
-    <div class="row" style="padding-top: 60px;"></div>
+    <div class="row bg-light" style="padding-top: 60px;"></div>
 
     <!-- movies gets passed in as a list containing movie data dicts -->
     <ul class="list-unstyled">
